[package]

name = "ios7crypt"
description = "legacy IOS7Crypt encryptor/decryptor"
version = "0.0.5"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"
homepage = "https://github.com/mcandre/ios7crypt-rs"
documentation = "https://docs.rs/releases/search?query=ios7crypt"

[dependencies]
rand = "0.3.15"
getopts = "0.2.14"

[lib]
name = "ios7crypt"
path = "src/lib/ios7crypt.rs"

[[bin]]
name = "ios7crypt"
path = "src/bin/ios7crypt.rs"
