[package]

name = "ios7crypt"
description = "legacy IOS7Crypt encryptor/decryptor"
version = "0.0.5"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"
homepage = "https://github.com/mcandre/ios7crypt-rs"
documentation = "https://docs.rs/releases/search?query=ios7crypt"

[dependencies]
rand = "0.3.15"
getopts = "0.2.18"
tinyrick = { version = "0.0.6", optional = true }
zip = { version = "0.4.2", optional = true }
glob = { version = "0.2.11", optional = true }

[features]
letmeout = ["tinyrick", "zip", "glob"]

[lib]
name = "ios7crypt"
path = "src/lib/ios7crypt.rs"

[[bin]]
name = "ios7crypt"
path = "src/bin/ios7crypt.rs"

[[bin]]
name = "rick"
path = "rick.rs"
required-features = ["letmeout"]
