[package]

name = "ios7crypt"
description = "legacy IOS7Crypt encryptor/decryptor"
version = "0.0.5"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"
homepage = "https://github.com/mcandre/ios7crypt-rs"
documentation = "https://docs.rs/releases/search?query=ios7crypt"

[dependencies]
rand = "0.3.15"
getopts = "0.2.18"
tinyrick = { version = "0.0.9", optional = true }
tinyrick_extras = { version = "0.0.3", optional = true }
zip = { version = "0.4.2", optional = true }
glob = { version = "0.2.11", optional = true }

[dev-dependencies]
quickcheck = "0.7.1"

[features]
letmeout = ["tinyrick", "tinyrick_extras", "zip", "glob"]

[lib]
name = "ios7crypt"

[[bin]]
name = "ios7crypt"
path = "src/bin/ios7crypt.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
